[gd_scene load_steps=12 format=3 uid="uid://ddsjv44c3fbss"]

[ext_resource type="Shader" path="res://gameplay/space_object/placeholder/placeholder.gdshader" id="2_byklw"]
[ext_resource type="Script" path="res://gameplay/space_object/placeholder/placeholder.gd" id="2_lvix1"]

[sub_resource type="BoxMesh" id="BoxMesh_7sqfv"]
size = Vector3(2, 2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bdfl0"]
resource_local_to_scene = true
resource_name = "placeholder_material"
render_priority = 0
shader = ExtResource("2_byklw")
shader_parameter/albedo = Color(0.333333, 1, 0.866667, 1)
shader_parameter/max_alpha = 1.0
shader_parameter/uv1_scale = Vector3(8, 8, 8)
shader_parameter/uv1_offset = Vector3(0, 0, 0)
shader_parameter/distance_scale_factor = 1.0
shader_parameter/aabb_mean_center_distance = 2.0
shader_parameter/grow = 1.0

[sub_resource type="Animation" id="Animation_ockaq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("_PlaceholderMesh:surface_material_override/0:shader_parameter/grow")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("_PlaceholderMesh:surface_material_override/0:shader_parameter/albedo")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.333333, 1, 0.866667, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("_PlaceholderMesh:surface_material_override/0:shader_parameter/max_alpha")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_1wvji"]
resource_name = "fadein"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("_PlaceholderMesh:surface_material_override/0:shader_parameter/max_alpha")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_glba4"]
resource_name = "fadeout"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("_PlaceholderMesh:surface_material_override/0:shader_parameter/grow")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("_PlaceholderMesh:surface_material_override/0:shader_parameter/max_alpha")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kf6h4"]
_data = {
"RESET": SubResource("Animation_ockaq"),
"fadein": SubResource("Animation_1wvji"),
"fadeout": SubResource("Animation_glba4")
}

[sub_resource type="Animation" id="Animation_y8htc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("_PlaceholderMesh:surface_material_override/0:shader_parameter/albedo")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.333333, 1, 0.866667, 1)]
}

[sub_resource type="Animation" id="Animation_61482"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("_PlaceholderMesh:surface_material_override/0:shader_parameter/albedo")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.333333, 1, 0.866667, 1), Color(0.054902, 0.764706, 0.890196, 1), Color(0.333333, 1, 0.866667, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fp2l2"]
_data = {
"RESET": SubResource("Animation_y8htc"),
"idle": SubResource("Animation_61482")
}

[node name="_Placeholder" type="Node3D"]
script = ExtResource("2_lvix1")

[node name="_PlaceholderMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_7sqfv")
surface_material_override/0 = SubResource("ShaderMaterial_bdfl0")

[node name="FadeAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kf6h4")
}

[node name="EmissionAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fp2l2")
}

[connection signal="animation_finished" from="FadeAnimator" to="." method="_on_fade_animator_animation_finished"]
